--- a/views/login_bar.slim
+++ b/views/login_bar.slim
@@ -3,4 +3,4 @@
       ### Welcome #{@current_teacher.email} | [Add/View/Update Tokens](/tokens) | [Logout](/logout)
 - else
     markdown:
-      ### [Login with Gmail](#{GOOGLE_OAUTH}#{GOOGLE_PARAMS}&redirect_uri=#{request.base_url}/oauth2callback_gmail&scope=email)
+      ### [Login with Gmail](#{google_url})
