Removed every whiff of encryption from the web app

--- a/views/login_bar.slim
+++ b/views/login_bar.slim
@@ -1,6 +1,6 @@
 - if @current_teacher
     markdown:
-      ### Welcome #{@current_teacher} | [Add/View/Update Tokens](/tokens) | [Logout](/logout)
+      ### Welcome #{@current_teacher_email} | [Add/View/Update Tokens](/tokens) | [Logout](/logout)
 - else
     markdown:
       ### [Login with Gmail](#{google_url})
