--- a/views/tokens.slim
+++ b/views/tokens.slim
@@ -17,7 +17,7 @@
           a href="#" onclick="toggler(#{count})" Click to view
           br
           textarea id="text-area-#{count}" style='display:none' rows='7' cols='50' readonly="true"
-            | #{token[3]}
+            | #{@api_payload}
         td align='center'
           input type='submit' name='_method' value='delete'
 
