--- a/views/tokens.slim
+++ b/views/tokens.slim
@@ -20,7 +20,7 @@
           a href="#" onclick="toggler(#{count})" Click to view
           br
           textarea id="text-area-#{count}" style='display:none' rows='7' cols='50' readonly="true"
-            | #{@api_payload}
+            | #{@regular_token}
         td align='center'
           input type='submit' name='_method' value='delete'
 
