--- a/views/login_bar.slim
+++ b/views/login_bar.slim
@@ -1,6 +1,6 @@
-- if @current_teacher
+- if @email_token
     markdown:
-      ### Welcome #{@current_teacher_email} | [Add/View/Update Tokens](/tokens) | [Logout](/logout)
+      ### Welcome #{@email_address} | [Add/View/Update Tokens](/tokens) | [Logout](/logout)
 - else
     markdown:
       ### [Login with Gmail](#{google_url})
